--- a/exemplo1.html
+++ b/exemplo1.html
@@ -5,12 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-</head>
-<body>
-    <H1> Exemplo 1 - 4/11</H1>
+<style> 
+ body
+{
+    margin: 0;
+    padding : 0;
+}
+ h1 
+{
+    background-color:deeppink;
+    color :aliceblue;
+    text-align: center;
+    margin : 0;
+    padding : 20px;
+}
+ form
+{
+    margin : auto;
+    width : 300px;
+    border : 1px solid pink ;
+    margin-top : 20px;
+    box-shadow : 0 0 10px pink;
+    padding : 5px ;
+}
+ input [ type=text]
+{
+    width: 280px ;
+}
+ input [type=submit]
+{
+background-color: fuchsia;
+color:azure;
+border : none ;
+padding : 10px 
+}
+   </style>
+ <H1> revisão de formulario e css</H1>
+    <form> 
     <p> 
-    digite a nota do aluno 
-<input type="text"
-</p>
+        Digite o nome do aluno<br> 
+        <input type="texto">
+    </p>
+    <p> 
+        Digite o nome do responsavel 1 <br> 
+        <input type="texto">
+    </p>
+    <p> 
+     Digite o nome do responsavel 2 <br> 
+     <input type="texto">
+    </p>
+    <p> 
+        <imput type="submit" value = "enviar"
+    </p>
+  </form> 
 </body>
 </html>
